--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -84,6 +84,9 @@
     {% # Quick View Modal %}
     {% render 'quick-view' %}
 
+    {% # Quick Add Modal %}
+    {% render 'quick-add-modal' %}
+
     {% # Cart Drawer - As section for dynamic updates %}
     {% section 'cart-drawer' %}
 
